feat: impl proto partial
