# internal/infrastructure/grpc/internal/handler/admin/marshaller/staff.go
@@ -11,22 +11,57 @@ func StaffToPB(m *model.Staff) *admin_apiv1.Staff {
 		return nil
 	}
 
-	var tenant *admin_apiv1.Tenant
-	if m.ReadonlyReference != nil {
-		tenant = TenantToPB(m.ReadonlyReference.Tenant)
+	var tenant *admin_apiv1.TenantPartial
+	if m.ReadonlyReference != nil && m.ReadonlyReference.Tenant != nil {
+		tenant = TenantPartialToPB(m.ReadonlyReference.Tenant)
 	}
 
 	return &admin_apiv1.Staff{
 		Id:          m.ID,
-		TenantId:    m.TenantID,
+		Tenant:      tenant,
 		Role:        StaffRoleToPB(m.Role),
 		AuthUid:     m.AuthUID,
 		DisplayName: m.DisplayName,
-		ImageUrl:    m.ImagePath,
+		ImageUrl:    m.ImageURL.String,
 		Email:       m.Email,
 		CreatedAt:   timestamppb.New(m.CreatedAt),
 		UpdatedAt:   timestamppb.New(m.UpdatedAt),
-
-		Tenant: tenant,
 	}
+}
+
+func StaffPartialToPB(m *model.Staff) *admin_apiv1.StaffPartial {
+	if m == nil {
+		return nil
+	}
+
+	var tenant *admin_apiv1.TenantPartial
+	if m.ReadonlyReference != nil && m.ReadonlyReference.Tenant != nil {
+		tenant = TenantPartialToPB(m.ReadonlyReference.Tenant)
+	}
+
+	return &admin_apiv1.StaffPartial{
+		Id:          m.ID,
+		Tenant:      tenant,
+		Role:        StaffRoleToPB(m.Role),
+		AuthUid:     m.AuthUID,
+		DisplayName: m.DisplayName,
+		ImageUrl:    m.ImageURL.String,
+		Email:       m.Email,
+	}
+}
+
+func StaffsToPB(slice model.Staffs) []*admin_apiv1.Staff {
+	dsts := make([]*admin_apiv1.Staff, len(slice))
+	for idx, m := range slice {
+		dsts[idx] = StaffToPB(m)
+	}
+	return dsts
+}
+
+func StaffsPartialToPB(slice model.Staffs) []*admin_apiv1.StaffPartial {
+	dsts := make([]*admin_apiv1.StaffPartial, len(slice))
+	for idx, m := range slice {
+		dsts[idx] = StaffPartialToPB(m)
+	}
+	return dsts
 }
